--- a/career_styles.css
+++ b/career_styles.css
@@ -21,17 +21,19 @@
 body {
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
-    background-color: #1B1A55;
+    background-color: #ffffff;
 }
 
 header {
     position: sticky;
     top: 0;
-    background-color: #070F2B;
+    background-color: #ffffff;
+    border-bottom: solid 1px rgb(141, 139, 139);
+    z-index: 1;
 }
 
 nav div img {
-    width: 100px;
+    width: 200px;
     margin-left: 30px;
 }
 
@@ -43,7 +45,7 @@ nav {
 
 nav ul li a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-family: "Kaisei Decol", serif;
 }
 
@@ -67,7 +69,7 @@ nav ul li {
     animation: boxanima 0.5s cubic-bezier(0, 0, 0, 0.97) forwards;
 }
 .b {
-    border: 1px solid black;
+    border: 1px solid rgb(154, 154, 154);
     height: 400px;
     border-radius: 10px;
     width: 300px;
@@ -76,14 +78,13 @@ nav ul li {
     justify-content: center;
     align-items: center;
     display: flex;
-    box-shadow: 0px 0px 20px 10px #9290c3;
+    box-shadow: 0px 0px 20px 10px #68638093;
     text-align: center;
 }
 
 .home {
     width: 98vw;
     display: flex;
-    margin-top: 100px;
     font-size: 20px;
     justify-content: center;
 }
