--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@keyframes buttonani{
-    from{
-        }
-    to{
+@keyframes buttonani {
+    from {}
+
+    to {
         background-color: #070F2B;
         color: white;
 
@@ -15,26 +15,30 @@
 
 body {
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
     background-color: #ffffff;
+
+
 }
 
 header {
     position: sticky;
     top: 0;
-    background-color: #ffffff;
+    width: 98.9vw;
+    background-color: #5dc7d4;
     border-bottom: solid 1px rgb(141, 139, 139);
     z-index: 1;
 }
 
-nav div img{
+nav div img {
     width: 200px;
     margin-left: 30px;
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 98vw;
 }
 
 nav ul li a {
@@ -42,7 +46,8 @@ nav ul li a {
     color: rgb(0, 0, 0);
     font-family: "Kaisei Decol", serif;
 }
-nav ul{
+
+nav ul {
     display: flex;
     gap: 45px;
     margin-right: 20px;
@@ -57,27 +62,41 @@ nav ul li {
     flex-direction: row;
 }
 
+.bg {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+    filter: brightness(40%);
+}
+
+
+
 .b {
     border: 1px solid rgba(0, 0, 0, 0.358);
     height: 500px;
     margin-top: 20px;
+    position: relative;
 
-  
+
 }
 
 .home {
-    width: 98vw;
+    width: 96vw;
     display: flex;
     margin: auto;
     font-size: 20px;
+
 }
 
 .b2 {
     width: 27%;
     align-items: center;
     text-align: center;
-    background-color:#535C91;
+    background-color: #afb1bc2f;
     border-radius: 0px 10px 10px 0px;
+    color: white;
+
 
 
 }
@@ -99,23 +118,133 @@ nav ul li {
 
 .b1 {
     width: 75%;
-    background-color: #9290C3;
+    background-color: #bdbcce36;
     border-radius: 10px 0 0 10px;
+    color: white;
+    text-align: center;
 }
-.Signup{
+
+.Signup {
     font-family: cursive;
-    margin:70px 0;
+    margin: 70px 0;
     font-size: 35px;
 }
-.butn button:hover{
+
+.butn button:hover {
     animation: buttonani 0.1s linear forwards;
 }
-.butn button{
+
+.butn button {
     border: none;
     background: #ffffff;
     padding: 10px 50px;
     border-radius: 10px;
     margin: 40px;
     cursor: pointer;
+
+}
+
+
+.menu>svg {
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.drop {
+    display: none;
+}
+
+.menu {
+    position: relative;
+}
+
+.menu-button {
+    font-size: 24px;
+    cursor: pointer;
+    color: #fff;
+    display: block;
+}
+
+.menu input[type="checkbox"] {
+    display: none;
+}
+
+.menu input[type="checkbox"]:checked~.dropdown {
+    display: block;
+}
+
+.dropdown li  {
+border-bottom: solid 1px rgb(234, 219, 219);
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 40px;
+    background-color: #000000;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 300px;
+    height: auto;
+    z-index: 10;
+    font-size: 20px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown a {
+    color: #fff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown a:hover {
+    background-color: #555;
+}
+
+.menu {
+    display: none;
+}
+
+@media screen and (max-width:700px) {
+    .home {
+        flex-direction: column;
+        width: 100vw;
+    }
+
+    nav,
+    header {
+        width: 100vw;
+    }
+
+    .bg {
+        width: 100vw;
+        height: 1100px;
+    }
+
+    nav ul {
+        display: none;
+        gap: 0;
+        margin-right: 20px;
+
+    }
+
+    .menu {
+        display: block;
+        margin:5px 10px;
+
+    }
+
+    .menu li {
+        list-style: none;
+    }
+
+    .b {
+        margin: 10px;
+        width: 95%;
+    }
 
 }
