--- a/style copy.css
+++ b/style copy.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: "poppins", sans-serif;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
@@ -24,6 +25,13 @@ body {
     width: 200px;
 }
 
+.pg2 {
+    background-color: #040714;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
 nav {
     display: flex;
     align-items: center;
@@ -34,7 +42,61 @@ nav {
     right: 0;
 }
 
+.nav2 ul {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
+}
 
+@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wdth,wght@87.5,100..800&display=swap');
+
+.imgs {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.img0 {
+    background-color: red;
+    width: 30vw;
+    height: 250px;
+}
+
+.nav2 ul li a {
+    color: white;
+    font-size: 25px;
+    font-family: monospace;
+}
+
+.nav2 ul li {
+    list-style: none;
+}
+
+.nav2 {
+    padding: 50px 0;
+}
+
+.imgs {
+    display: flex;
+    flex-wrap: wrap; /* If you want the images to wrap */
+    gap: 40px; /* Space between images */
+  }
+  
+  .img0 {
+    width: 400px; /* Set the desired width */
+    height: 250px; /* Set the desired height */
+    overflow: hidden; /* Hide overflowed parts of the image */
+  }
+  
+  .img0 img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill; /* Ensure the image covers the whole div */
+  }
+  
 .logo {
     width: 300px;
     height: 200px;
@@ -147,8 +209,11 @@ nav button {
     padding: 15px 30px;
 }
 
+
 .menu>svg {
     display: none;
+    align-items: center;
+    justify-content: center;
 }
 
 .drop {
@@ -174,6 +239,10 @@ nav button {
     display: block;
 }
 
+.dropdown li {
+    border-bottom: solid 1px rgb(234, 219, 219);
+}
+
 .dropdown {
     display: none;
     position: absolute;
@@ -183,9 +252,9 @@ nav button {
     border-radius: 5px;
     overflow: hidden;
     width: 300px;
-    height: 500px;
+    height: auto;
     z-index: 10;
-    font-size: 40px;
+    font-size: 20px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
@@ -204,6 +273,19 @@ nav button {
 .menu {
     display: none;
 }
+
+
+/* .pionts ul {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.pionts ul li {
+    font-size: 30px;
+
+} */
 
 @media (max-width: 1000px) {
     .header-content div {
@@ -279,14 +361,15 @@ nav button {
 
     .menu {
         display: block;
-        margin-top: 40px;
-        
+        margin: 5px 10px;
+
     }
 
     .menu li {
         list-style: none;
     }
-    .logo{
+
+    .logo {
         width: 500px;
         height: 200px;
     }
