--- a/10th.css
+++ b/10th.css
@@ -145,69 +145,46 @@ nav ul li {
     flex-direction: row;
 }
 
-.main>div {
-    margin: 50px;
-}
-
-.main h3 {
-    border-bottom: solid 2px rgb(255, 255, 255);
-    text-align: center;
-    color: white !important;
-   padding-top: 20px;
-}
-
-.main {
-    font-size: 30px;
-}
 
 .descri {
     font-size: 25px;
     margin-left: 20px
 }
 
-.card {
-    border: 1px solid black;
-    padding: 30px;
-    box-shadow: #00000057 10px 9px 17px 5px;
-    background-color: #787fa8;
-    width: 300px;
-    height: 80px;
+.heding{
+    color: white;
     text-align: center;
-    overflow: hidden;
-    position: relative;
+    font-size: 40px;
+    padding: 50px;
 }
-
-
-.cards {
-    display: flex;
-    justify-content: space-around;
-    gap: 30px;
-    flex-wrap: wrap;
-
-}
-
-.descri>li {
-    list-style: square;
+.descri {
+    font-size: 25px;
+    margin-left: 20px;
+    display: none;
     text-align: left;
 }
 
-.descri {
-    /* max-height: 0;  
-    opacity: 0;  
-    overflow: hidden;  
-    transition: max-height 0.5s ease, opacity 0.5s ease; */
-    margin-top: 10px;
-
+.card {
+    border: 1px solid white;
+    overflow: hidden;
+    border-radius: 10px;
+    width: 400px;
+    background-color: black;
+    padding: 10px;
+    text-align: center;
+    position: relative;
 }
 
-/* .card:hover .descri {
-    max-height: 400px; 
-    opacity: 1; 
-  } */
-
-
-
-
+.crds {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* position: relative; */
+    flex-direction: row;
+    flex-wrap: wrap;
+    color: white;
+    gap: 30px;
+}
 @keyframes expand-iti {
     from {
         height: 80px;
@@ -263,28 +240,6 @@ nav ul li {
     }
 }
 
-
-.sci:hover {
-    animation: expand-sci 2s ease-in-out forwards;
-
-}
-
-.com:hover {
-    animation: expand-com 2s ease-in-out forwards;
-
-}
-
-.art:hover {
-    animation: expand-iti 2s ease-in-out forwards;
-}
-.iti:hover {
-    animation: expand-iti 2s ease-in-out forwards;
-}
-
-.diploma a {
-    text-decoration: none;
-    color: rgb(0, 0, 0) ;
-}
 .bg {
     width: 100%;
     height: 1000px;
@@ -345,9 +300,7 @@ nav ul li {
         flex-direction: column;
     
     }
-    .main{
-        margin: 0;
-    }
+
 
 
 }
