--- a/gradution.css
+++ b/gradution.css
@@ -1,33 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wdth,wght@87.5,100..800&display=swap');
-
-
-.descri li {
-    color: rgb(0, 0, 0);
-    font-size: 30px;
-    font-family: "Martian Mono", monospace;
-    padding: 0 30px;
-
-
-
-}
-
-.descri {
-    background-color: #787fa8;
-    width: 60%;
-    margin:20px auto;
- 
-}
-.deploma span {
-    border-bottom:solid 3px #ffff;
-}
-.deploma {
-    color: white;
+.b1 {
+    align-items: center;
     text-align: center;
-    font-size: 50px;
-    font-family:monospace;
-    padding: 20px;
 
 }
+
+@keyframes boxanima {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
+}
+
+
+
 
 .menu>svg {
     display: none;
@@ -40,6 +28,7 @@
 }
 
 .menu {
+    z-index: 100;
     position: relative;
 }
 
@@ -93,21 +82,9 @@
     display: none;
 }
 
-
-@keyframes boxanima {
-    from {
-        transform: scale(1);
-    }
-
-    to {
-        transform: scale(1.1);
-    }
-}
-
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
 }
 
 body {
@@ -122,7 +99,6 @@ header {
     width: 98.9vw;
     background-color: #5dc6d400;
     border-bottom: solid 1px rgb(141, 139, 139);
-
     z-index: 1;
 }
 
@@ -140,7 +116,6 @@ nav {
 nav ul li a:hover {
     background-color: red;
 }
-
 nav ul li a {
     text-decoration: none;
     color: rgb(255, 255, 255);
@@ -153,7 +128,6 @@ nav ul li a {
     font-size: 20px;
 }
 
-
 nav ul {
     display: flex;
     gap: 25px;
@@ -163,25 +137,57 @@ nav ul {
 
 nav ul li {
     list-style: none;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-}
-
-.diploma a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
+  
 }
 
 .bg {
     width: 100%;
-    height: 1000px;
+    height: 100vh;
     position: absolute;
     z-index: -1;
     filter: brightness(40%);
 }
 
+.b:hover {
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+    animation: boxanima 0.5s cubic-bezier(0, 0, 0, 0.97) forwards;
+}
+
+.b {
+    border: 1px solid rgb(255, 255, 255);
+    height: 180px;
+    border-radius: 10px;
+    width: 300px;
+    margin: 70px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    text-align: center;
+    box-shadow: #00000057 10px 9px 17px 5px;
+    background-color: black;
+}
+
+.home {
+    width: 98vw;
+    display: flex;
+    font-size: 20px;
+    justify-content: center;
+}
+
+.b2 {
+    align-items: center;
+    text-align: center;
+}
+
+.b>a {
+    text-decoration: none;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-size: 35px;
+    font-family: "Kaisei Decol", serif;
+}
 
 @media screen and (max-width:700px) {
     .home {
@@ -194,7 +200,7 @@ nav ul li {
         width: 100vw;
     }
 
-   
+
     .bg {
         width: 100vw;
         height: 1300px;
@@ -215,6 +221,16 @@ nav ul li {
 
     .menu li {
         list-style: none;
+    }
+
+    .b {
+        margin: 20px auto;
+        width: 60%;
+        height: 300px;
+    }
+
+    .b a {
+        font-size: 40px;
     }
 
 }
