--- a/style copy.css
+++ b/style copy.css
@@ -25,21 +25,94 @@ body {
     width: 200px;
 }
 
-.pg2 {
+.pg2,
+.pg3 {
     background-color: #040714;
     height: 100vh;
     margin: 0;
     padding: 0;
+    width: 100vw;
+}
+
+.pg3 {
+    text-align: center;
+
+}
+
+.pg3 button {
+    padding: 10px 30px;
+    margin: 20px;
+    background-color: #0063e5;
+    color: white;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.crd {
+    padding: 20px 20px;
+    border-radius: 10px;
+    border: 1px solid white;
+    margin: 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    gap: 5px;
+    min-height: 336px;
+    flex-direction: column;
+}
+
+header {
+    position: sticky;
+    top: 0;
+    width: 98.9vw;
+    background-color: #5dc6d400;
+    border-bottom: solid 1px rgb(141, 139, 139);
+    z-index: 1;
+    margin: -122px;
+}
+
+nav div img {
+    width: 200px;
+    margin-left: 0;
 }
 
 nav {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding: 10px 0px;
-    /* position: absolute; */
-    top: 0;
-    right: 0;
+    align-items: center;
+}
+
+nav ul li a:hover {
+    background-image: linear-gradient(to right, #6a11cb, #2575fc);
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: "Kaisei Decol", serif;
+    padding: 5px 10px;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-size: 20px;
+}
+
+nav ul {
+    display: flex;
+    gap: 25px;
+    margin-right: 20px;
+
+}
+
+nav ul li {
+    list-style: none;
+
 }
 
 .nav2 ul {
@@ -81,28 +154,26 @@ nav {
 
 .imgs {
     display: flex;
-    flex-wrap: wrap; /* If you want the images to wrap */
-    gap: 40px; /* Space between images */
-  }
-  
-  .img0 {
-    width: 400px; /* Set the desired width */
-    height: 250px; /* Set the desired height */
-    overflow: hidden; /* Hide overflowed parts of the image */
-  }
-  
-  .img0 img {
+    flex-wrap: wrap;
+    /* If you want the images to wrap */
+    gap: 40px;
+    /* Space between images */
+}
+
+.img0 {
+    width: 400px;
+    /* Set the desired width */
+    height: 250px;
+    /* Set the desired height */
+    overflow: hidden;
+    /* Hide overflowed parts of the image */
+}
+
+.img0 img {
     width: 100%;
     height: 100%;
-    object-fit: fill; /* Ensure the image covers the whole div */
-  }
-  
-.logo {
-    width: 300px;
-    height: 200px;
-    position: fixed;
-    cursor: pointer;
-    left: -20px;
+    object-fit: fill;
+    /* Ensure the image covers the whole div */
 }
 
 nav button {
@@ -119,38 +190,6 @@ nav button {
 
 }
 
-.nav-links {
-    list-style: none;
-    display: flex;
-}
-
-.nav-links li {
-    margin-left: 20px;
-}
-
-.nav-links a {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
-    padding: 10px 10px;
-    transition: background-color 0.3s ease;
-    font-size: 20px;
-}
-
-.nav-links a:hover {
-    background-color: red;
-    border-radius: 5px;
-}
-
-
-
-.nav-links {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    margin-left: auto;
-    padding-right: 20px;
-}
 
 .signin {
     display: flex;
@@ -241,8 +280,21 @@ nav button {
 
 .dropdown li {
     border-bottom: solid 1px rgb(234, 219, 219);
+    padding: 20px;
 }
+ .quiz button a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+ }
+ .quiz button{
+   background-image: linear-gradient(to right, #6a11cb, #2575fc);
+   padding: 10px 20px;
+   border-radius: 5px;
+   border:none;
 
+
+ }
 .dropdown {
     display: none;
     position: absolute;
@@ -251,10 +303,10 @@ nav button {
     background-color: #000000;
     border-radius: 5px;
     overflow: hidden;
-    width: 300px;
-    height: auto;
+    width: 600px;
+    height: 1000px;
     z-index: 10;
-    font-size: 20px;
+    font-size: 70px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
@@ -286,28 +338,22 @@ nav button {
     font-size: 30px;
 
 } */
+.pionts ul {
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+}
+
+.pionts ul li {
+    font-size: 30px;
+}
+
+.ins {
+    text-decoration: underline white !important;
+}
+
 
 @media (max-width: 1000px) {
-    .header-content div {
-        font-size: 100px;
-        margin: 40px 0px;
-        line-height: 1.2;
-    }
-
-    .header-content p {
-        font-size: 50px;
-    }
-
-    .header-content {
-        width: 800px;
-        height: 1000px;
-
-    }
-
-    .nav-links {
-        display: none;
-
-    }
 
     .email-signup {
         flex-direction: column;
@@ -326,37 +372,28 @@ nav button {
         font-size: 40px;
     }
 
-    nav button {
-        height: 50px;
-        font-size: 30px;
-    }
 
-    nav {
-        align-items: right;
-        justify-content: flex-end;
-        height: 100px;
-        width: 90vw;
-    }
-
-    .signin svg {
-        width: 50px;
-        height: 50px;
-    }
-
-    .signin {
-        margin-right: 110px;
-        margin-top: 40px;
-    }
-
-    .nav-links1>li>a {
-        text-decoration: none;
-        color: white;
-    }
-
-    .nav-links1 {
-        list-style: none;
-        display: flex;
+    .home {
         flex-direction: column;
+        width: 100vw;
+    }
+
+    nav,
+    header {
+        width: 100vw;
+    }
+
+
+    .bg {
+        width: 100vw;
+        height: 1300px;
+    }
+
+    nav ul {
+        display: none;
+        gap: 0;
+        margin-right: 20px;
+
     }
 
     .menu {
@@ -369,8 +406,36 @@ nav button {
         list-style: none;
     }
 
-    .logo {
-        width: 500px;
-        height: 200px;
+    .b {
+        margin: 20px auto;
+        width: 60%;
+        height: 300px;
     }
+
+    .b a {
+        font-size: 40px;
+    }
+
+    .header {
+        height: 50vh;
+    }
+
+    .logo img {
+        width: 400px;
+        height: 100px;
+    }
+
+    .nav2 ul {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding:0 100px;
+
+    }
+
+    .pg2,
+    .pg3 {
+        height: 50vh;
+    }
+
 }
