--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@
     padding: 0;
     box-sizing: border-box;
   }
-
+.img{
+position: absolute;
+z-index: -1;
+filter: blur(1px);
+filter: brightness(20%);
+}
   body {
     font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(
@@ -20,6 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
   }
 
   .form-container {
@@ -110,3 +116,322 @@
     background: linear-gradient(to right, #2575fc, #6a11cb);
     box-shadow: 0px 5px 15px rgba(106, 17, 203, 0.4);
   }
+
+
+
+
+  .b1 {
+    align-items: center;
+    text-align: center;
+
+}
+
+main {
+    background-color: #040714;
+}
+
+.menu>svg {
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.drop {
+    display: none;
+}
+
+.menu {
+    position: relative;
+}
+
+.menu-button {
+    font-size: 24px;
+    cursor: pointer;
+    color: #fff;
+    display: block;
+}
+
+.menu input[type="checkbox"] {
+    display: none;
+}
+
+.menu input[type="checkbox"]:checked~.dropdown {
+    display: block;
+}
+
+.dropdown li {
+    border-bottom: solid 1px rgb(234, 219, 219);
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 40px;
+    background-color: #000000;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 300px;
+    height: auto;
+    z-index: 10;
+    font-size: 20px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown a {
+    color: #fff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown a:hover {
+    background-color: #555;
+}
+
+.menu {
+    display: none;
+}
+
+
+@keyframes boxanima {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+body {
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    background-color: #ffffff;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    width: 98.9vw;
+    background-color: #5dc6d400;
+    border-bottom: solid 1px rgb(141, 139, 139);
+    z-index: 1;
+}
+
+nav div img {
+    width: 200px;
+    margin-left: 0;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav ul li a:hover {
+    background-image: linear-gradient(to right, #6a11cb, #2575fc);
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: "Kaisei Decol", serif;
+    padding: 5px 10px;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-size: 20px;
+}
+
+nav ul {
+    display: flex;
+    gap: 25px;
+    margin-right: 20px;
+
+}
+
+nav ul li {
+    list-style: none;
+
+}
+
+.nav2 ul {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
+}
+
+main h3 {
+    margin-bottom: 50px;
+}
+
+/* .main>div {
+    margin: 50px;
+} */
+
+.main h3 {
+    border-bottom: solid 2px rgb(255, 255, 255);
+    text-align: center;
+    color: white !important;
+    padding-top: 100px;
+}
+
+.main {
+    font-size: 30px;
+}
+
+.descri li {
+    list-style:"●";
+    background:linear-gradient(to right, #6a11cb, #2575fc);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+
+.descri {
+    display: none;
+    font-size: 25px;
+    margin-left: 20px;
+    text-align: left;
+    z-index: 1;
+    position: fixed;
+    top: 50px;
+    left: -20px;
+    background-color: rgb(255, 255, 255);
+    padding: 60px;
+    width: 91vw;
+    height: 80vh;
+
+}
+
+
+.card {
+    border: 1px solid white;
+    overflow: hidden;
+    border-radius: 10px;
+    width: 400px;
+    background-color: black;
+    padding: 10px;
+    text-align: center;
+    position: relative;
+}
+
+.crds {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    /* position: relative; */
+    flex-direction: row;
+    flex-wrap: wrap;
+    color: white;
+    gap: 30px;
+}
+
+.footer {
+    margin: 50px 0 0 0;
+    height: 50vh;
+    border-top: 2px solid white;
+    background-color: black;
+
+}
+
+@keyframes expand {
+    from {
+        height: 80px;
+
+        .descri {
+            opacity: 0;
+        }
+    }
+
+    to {
+        height: 700px;
+
+        .descri {
+            opacity: 1;
+        }
+
+    }
+}
+
+
+.bg {
+    width: 100%;
+    height: 1000px;
+    position: absolute;
+    z-index: -1;
+    filter: brightness(40%);
+}
+
+
+@media screen and (max-width:700px) {
+    .home {
+        flex-direction: column;
+        width: 100vw;
+    }
+
+    nav,
+    header {
+        width: 100vw;
+    }
+
+    .bg {
+        width: 100vw;
+        height: 1300px;
+    }
+
+    nav ul {
+        display: none;
+        gap: 0;
+        margin-right: 20px;
+
+    }
+
+    .menu {
+        display: block;
+        margin: 5px 10px;
+
+    }
+
+    .menu li {
+        list-style: none;
+    }
+
+    .b {
+        margin: 10px;
+        width: 95%;
+    }
+
+    .main {
+        margin: 0;
+    }
+
+    .card {
+        width: 100vw;
+        margin: 0;
+        /* padding: 0; */
+    }
+
+    .crds {
+        margin: 0;
+        padding: 0;
+    }
+}
+.block{
+    display: block;
+}
+.none{
+    display: none;
+}
